results/SpecGenBench/0-shot/log-MulNested-2023_11_28_23_17_20.txt
public class MulNested {
    
    //@ requires true;
    //@ ensures \result == x * y;
    public static int mulNested(int x, int y) {
        int res = 0, m = x, n = y, sign = 1;
        
        //@ assume x < 0 || x >= 0;
        if(x < 0){
            m = -x;
            sign = -sign;
        }
        
        //@ assume y < 0 || y >= 0;
        if(y < 0){
            n = -y;
            sign = -sign;
        }
        
        //@ assume m >= 0;
        //@ assume n >= 0;
        //@ assume res == 0;
        //@ loop_invariant 0 <= i && i <= m;
        //@ loop_invariant res == i * n;
        //@ decreases m - i;
        for(int i = 0; i < m; i++) {
            
            //@ assume 0 <= j && j <= n;
            //@ assume res == i * n;
            //@ loop_invariant 0 <= j && j <= n;
            //@ loop_invariant res == i * n + j;
            //@ decreases n - j;
            for(int j = 0; j < n; j++) {
                res = res + 1;
            }
        }
        
        //@ assert res == m * n;
        return sign * res;
    }
}
/home/max/Documents/JMLGPT/tmp/MulNested.java:28: error: cannot find symbol
            //@ assume 0 <= j && j <= n;
                            ^
  symbol:   variable j
  location: class MulNested
/home/max/Documents/JMLGPT/tmp/MulNested.java:28: error: cannot find symbol
            //@ assume 0 <= j && j <= n;
                                 ^
  symbol:   variable j
  location: class MulNested
2 errors

